# usque-a

./: .gitignore  CMakeLists.txt  Makefile  build.sh  deps.sh
.github/workflows/: deps.yml  release.yml
examples/: CMakeLists.txt  basic_config.c
include/usque/: config.h  dns_hijack.h  error.h  route_bsd.h  route_linux.h  route_windows.h  tun.h  tun_linux.h  tun_windows.h  tunnel.h  types.h  usque.h  version.h
src/: CMakeLists.txt  error.cpp  main.cpp  tunnel.cpp  version.cpp
src/api/: https_client.cpp  https_client.h  register.cpp  register.h
src/config/: config.cpp  config_impl.h  defaults.cpp  defaults.h  duration.cpp  duration.h  parse.cpp  parse.h  serialize.cpp  validate.cpp  validate.h
src/connectip/: connect_ip.c  connect_ip.h
src/transport/: http3_connect.cpp  http3_connect.h  quic_engine.cpp  quic_engine.h  timestamp.h  tls_setup.cpp  tls_setup.h
src/tun/: dns_hijack.c  route_bsd.c  route_linux.c  route_windows.c  tun_darwin.c  tun_freebsd.c  tun_linux.c  tun_windows.c
tests/: CMakeLists.txt  test_config.cpp  test_connectip.c  test_dns_hijack.c  test_duration.cpp  test_fuzz.c  test_register.c  test_regression.c  test_validate.cpp
tests/testdata/: full.json  minimal.json
